WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61481
CachedResource overhead size calculation ignores the actual size of the URL
https://bugs.webkit.org/show_bug.cgi?id=61481
Summary
CachedResource overhead size calculation ignores the actual size of the URL
James Robinson
Reported
2011-05-25 16:16:16 PDT
CachedResource overhead size calculation ignores the actual size of the URL
Attachments
Patch
(1.99 KB, patch)
2011-05-25 16:19 PDT
,
James Robinson
ggaren
: review+
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-05-25 16:19:18 PDT
Created
attachment 94878
[details]
Patch
James Robinson
Comment 2
2011-05-25 16:20:23 PDT
This is one issue that contributes to the memory growth seen on the test page from
https://bugs.webkit.org/show_bug.cgi?id=61006
.
Geoffrey Garen
Comment 3
2011-05-25 16:20:45 PDT
Comment on
attachment 94878
[details]
Patch r=me
Early Warning System Bot
Comment 4
2011-05-25 16:33:51 PDT
Comment on
attachment 94878
[details]
Patch
Attachment 94878
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/8731864
WebKit Commit Bot
Comment 5
2011-05-25 17:37:17 PDT
Comment on
attachment 94878
[details]
Patch
Attachment 94878
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/8736095
Collabora GTK+ EWS bot
Comment 6
2011-05-25 17:46:01 PDT
Comment on
attachment 94878
[details]
Patch
Attachment 94878
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/8737021
James Robinson
Comment 7
2011-05-25 17:49:33 PDT
This collides a bit with
http://trac.webkit.org/changeset/87239
, hence all the EWS sadness. Will resolve before landing (the difference is that the request url now lives on m_resourceRequest instead of being a string hanging directly off the CachedResource).
James Robinson
Comment 8
2011-05-25 18:08:09 PDT
Committed
r87344
: <
http://trac.webkit.org/changeset/87344
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug